--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -1,6 +1,51 @@
+.in-row {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.col-12 {
+    width: 100%;
+}
+.col-11 {
+    width: 91.66666667%;
+}
+.col-10 {
+    width: 83.33333333%;
+}
+.col-9 {
+    width: 75%;
+}
+.col-8 {
+    width: 66.66666667%;
+}
+.col-7 {
+    width: 58.33333333%;
+}
+.col-6 {
+    width: 50%;
+}
+.col-5 {
+    width: 41.66666667%;
+}
+.col-4 {
+    width: 33.33333333%;
+}
+.col-3 {
+    width: 25%;
+}
+.col-2 {
+    width: 16.66666667%;
+}
+.col-1 {
+    width: 8.33333333%;
+}
 @media (max-width: 767px) {
     .text-center-xs {
         text-align: center;
+    }
+    .text-left-xs {
+        text-align: left;
     }
     .text-right-xs {
         text-align: right;
@@ -13,6 +58,9 @@
     .text-center-sm {
         text-align: center;
     }
+    .text-left-sm {
+        text-align: left;
+    }
     .text-right-sm {
         text-align: right;
     }
@@ -24,6 +72,9 @@
     .text-center-md {
         text-align: center;
     }
+    .text-left-md {
+        text-align: left;
+    }
     .text-right-md {
         text-align: right;
     }
@@ -34,6 +85,9 @@
 @media (min-width: 1200px) {
     .text-center-lg {
         text-align: center;
+    }
+    .text-left-lg {
+        text-align: left;
     }
     .text-right-lg {
         text-align: right;
@@ -52,10 +106,25 @@
 .mt-20 {
     margin-top: 20px !important;
 }
-
 .mt-30 {
     margin-top: 30px !important;
 }
 .mt-40 {
     margin-top: 40px !important;
+}
+
+.mb-10 {
+    margin-bottom: 10px !important;
+}
+.mb-15 {
+    margin-bottom:15px !important;
+}
+.mb-20 {
+    margin-bottom: 20px !important;
+}
+.mb-30 {
+    margin-bottom: 30px !important;
+}
+.mb-40 {
+    margin-bottom: 40px !important;
 }
