--- a/web/css/site.css
+++ b/web/css/site.css
@@ -2,6 +2,10 @@
 html, body {
     height: 100%;
 }
+p {
+    text-indent: 10px !important;
+    padding: 5px;
+}
 
 .wrap {
     min-height: 100%;
@@ -123,10 +127,16 @@ a.desc:after {
     line-height: 34px;
 }
 
-/* yii elements styles */
-.summary {
-    line-height: 38px;
+/* auth clients styling */
+.auth-clients {
+    text-align: center;
 }
+.auth-clients .auth-icon {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+/* yii elements styles */
 .pagination {
     margin: 0;
 }
@@ -153,6 +163,31 @@ a.desc:after {
 .pagination li.active a:hover, .pagination li.active a:focus {
     background: #eee !important;
 }
+.summary {
+    line-height: 38px;
+}
+
+    /* user header section */
+.user-header {
+    height: 48px;
+}
+.user-header .avatar {
+    float: left;
+    width: 48px;
+    margin-right: 10px;
+}
+.user-header .fullname, .user-header .time {
+    line-height: 24px;
+}
+.user-header .fullname {
+    color: #2a5885;
+}
+.user-header .time {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 2em;
+    color: #999;
+}
 
 /* advert form */
 .advert-form .files-list {
@@ -175,6 +210,7 @@ a.desc:after {
     top: 5px;
     width: 32px;
     height: 32px;
+    cursor: pointer;
     color: #fff;
     background-color: rgba(0, 0, 0, .5);
     font-size: 28px;
@@ -212,56 +248,62 @@ a.desc:after {
 .adverts-list {
 
 }
-.adverts-list .advert-container {
+.advert-container .files-list img {
+    margin-right: 10px;
+    height: 80px;
+}
+.advert-container {
+    position: relative;
     margin: 0 0 30px 0;
     padding: 15px 10px;
 }
-.adverts-list .advert-container:hover {
-    //cursor: pointer;
+.advert-container:hover {
     background: #f8f8f8;
 }
-.adverts-list .advert-container:last-child {
+.advert-view .advert-container:hover {
+    background: none;
+}
+.advert-container:last-child {
     border-bottom: none;
 }
-.adverts-list img {
-    float: left;
-    width: 48px;
-    margin-right: 10px;
-}
 
-.adverts-list .advert-container a.content {
+.advert-container a.content {
     display: block;
     text-indent: 12px;
     color: #555;
 }
-.adverts-list .advert-container a.user-fullname {
-    color: #2a5885;
-}
-.adverts-list .advert-container a.content:hover {
+.advert-container .content:hover {
     text-decoration: none;
     background: none;
 }
-.adverts-list .advert-container .info, .adverts-list .advert-container .actions {
+.advert-container .info, .advert-container .actions {
     font-weight: bold;
     font-size: 13px;
     line-height: 2em;
-    color: #777;
+    color: #999;
 }
-.adverts-list .actions span {
+.actions-top {
+    position: absolute;
+    top: 17px;
+    right: 10px;
+}
+.advert-container .actions a, .advert-container .actions span {
     padding: 2px 5px;
     border-radius: 4px;
     -moz-border-radius: 4px;;
     -webkit-border-radius: 4px;
     color: #888;
 }
-.adverts-list .actions .active {
+.advert-container .actions .active {
     color: #00aa00;
 }
-.adverts-list .actions .like-button:hover, .adverts-list .actions .bookmark-button:hover {
+.advert-container .actions a:hover,
+.advert-container .actions .like-button:hover,
+.advert-container .actions .bookmark-button:hover {
     background: #ddd;
     cursor: pointer;
 }
-.adverts-list .actions a:hover, .adverts-list .actions a:focus {
+.advert-container .actions a:hover, .advert-container .actions a:focus {
     text-decoration: none;
 }
 
@@ -323,4 +365,11 @@ a.desc:after {
 }
 .icon.vkontakte {
     background-position: -84px 0;
+}
+
+/* blueimp gallery styling */
+.blueimp-gallery > .indicator > li {
+    width: 50px;
+    height: 50px;
+    opacity: 1 !important;
 }
