--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -4,6 +4,12 @@
     padding-right: 15px;
     padding-left: 15px;
 }
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
 .col-12 {
     width: 100%;
 }
@@ -40,6 +46,7 @@
 .col-1 {
     width: 8.33333333%;
 }
+
 @media (max-width: 767px) {
     .text-center-xs {
         text-align: center;
@@ -97,11 +104,17 @@
     }
 }
 
+.mt-0 {
+    margin-top: 0px !important;
+}
+.mt-5 {
+    margin-top: 5px !important;
+}
 .mt-10 {
     margin-top: 10px !important;
 }
 .mt-15 {
-    margin-top:15px !important;
+    margin-top: 15px !important;
 }
 .mt-20 {
     margin-top: 20px !important;
@@ -113,6 +126,12 @@
     margin-top: 40px !important;
 }
 
+.mb-0 {
+    margin-bottom: 0px !important;
+}
+.mb-5 {
+    margin-bottom: 5px !important;
+}
 .mb-10 {
     margin-bottom: 10px !important;
 }
@@ -127,4 +146,42 @@
 }
 .mb-40 {
     margin-bottom: 40px !important;
+}
+
+.mr-0 {
+    margin-right: 0px !important;
+}
+
+.ml-0 {
+    margin-left: 0px !important;
+}
+
+.pt-0 {
+    padding-top: 0px !important;
+}
+
+.pb-0 {
+    padding-bottom: 0px !important;
+}
+.pr-0 {
+    padding-right: 0px !important;
+}
+.pl-0 {
+    padding-left: 0px !important;
+}
+
+
+.btn-secondary {
+    color: #555;
+    background-color: #eee;
+    border-color: #eee;
+}
+.btn-secondary:hover {
+    color: #555;
+    background-color: #ddd;
+    border-color: #eee;
+}
+
+.text-bold {
+    font-weight: bold;
 }
