--- a/web/css/app.css
+++ b/web/css/app.css
@@ -28,17 +28,18 @@
 .pagination li.active a:hover, .pagination li.active a:focus {
     background: #eee !important;
 }
-.sorter, .summary, .widget-page-size {
+
+.sorter, .summary, .widget-page-size, .ui-currency {
     line-height: 30px;
+}
+.widget-page-size span.active, .ui-currency span.active {
+    font-weight: bold;
+    color: #337ab7;
+    cursor: not-allowed;
 }
 
 .form-group label.control-label {
     margin-bottom: 0 !important;
-}
-
-/* widget-page-size */
-.widget-page-size select {
-    width: 75px;
 }
 
 /* datetimepicker */
