--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -159,15 +159,26 @@
 .pt-0 {
     padding-top: 0px !important;
 }
-
+.pt-5 {
+    padding-top: 5px !important;
+}
 .pb-0 {
     padding-bottom: 0px !important;
+}
+.pb-5 {
+    padding-bottom: 5px !important;
 }
 .pr-0 {
     padding-right: 0px !important;
 }
+.pr-5 {
+    padding-right: 5px !important;
+}
 .pl-0 {
     padding-left: 0px !important;
+}
+.pl-5 {
+    padding-left: 5px !important;
 }
 
 
@@ -184,4 +195,8 @@
 
 .text-bold {
     font-weight: bold;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
